# control

./: README.txt  control.py  control.yaml  pyproject.toml  setup.py  test.js  undead.py
control/: api.py  cli.py  control.py  control_old.py  models.py
test/: control.yaml  test.py
